Refactoring of Mass Production Facility

--- a/chatbot_client.ipynb
+++ b/chatbot_client.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,12 +48,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the following, we use the default type_name, type_role, instance_context, and instance_starter defined in the Chatbot class"
+    "In the following, we use the default type_name, type_role, instance_context, and instance_starter defined in the Chatbot class. Provide your own prompts instead."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,9 +78,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "instance configurations must be provided in any case",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m bot \u001b[39m=\u001b[39m Chatbot(\n\u001b[0;32m      2\u001b[0m     database_file\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mdata/chatbot.db\u001b[39;49m\u001b[39m\"\u001b[39;49m, \n\u001b[0;32m      3\u001b[0m     type_id\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m053e97a0-6a91-4589-8602-340aa47b6376\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[0;32m      4\u001b[0m     user_id\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m7515865e-4097-4dd7-9567-d3c7a4c1ed07\u001b[39;49m\u001b[39m\"\u001b[39;49m\n\u001b[0;32m      5\u001b[0m )\n\u001b[0;32m      6\u001b[0m \u001b[39mprint\u001b[39m(bot\u001b[39m.\u001b[39mconversation_retrieve(with_system\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m))\n\u001b[0;32m      7\u001b[0m \u001b[39mprint\u001b[39m(bot\u001b[39m.\u001b[39minfo_retrieve())\n",
+      "File \u001b[1;32mc:\\Users\\despi\\Documents\\chatbots_gpt35turbo\\chatbot_db.py:25\u001b[0m, in \u001b[0;36mChatbot.__init__\u001b[1;34m(self, database_file, type_id, user_id, type_name, type_role, instance_context, instance_starter)\u001b[0m\n\u001b[0;32m     23\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mRuntimeError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mif any of type configuration is provided, then all of type configurations must be provided\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     24\u001b[0m \u001b[39mif\u001b[39;00m (instance_context \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mor\u001b[39;00m instance_starter \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m):\n\u001b[1;32m---> 25\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mRuntimeError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39minstance configurations must be provided in any case\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     27\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_db_helper \u001b[39m=\u001b[39m ChatbotDBHelper(\n\u001b[0;32m     28\u001b[0m     database\u001b[39m=\u001b[39mdatabase_file,\n\u001b[0;32m     29\u001b[0m     type_id\u001b[39m=\u001b[39mtype_id,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     34\u001b[0m     instance_starter\u001b[39m=\u001b[39minstance_starter\n\u001b[0;32m     35\u001b[0m )\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: instance configurations must be provided in any case"
+     ]
+    }
+   ],
    "source": [
     "bot = Chatbot(\n",
     "    database_file=\"data/chatbot.db\", \n",
@@ -126,9 +139,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Create another chatbot \"Learning Assistant\" for user Y\n",
-    "In the following, we provide our own type_name, type_role, instance_context, and instance_starter.\n",
-    "By providing a number we can automatically create a set amount of users."
+    "#### Creating multiple instances of chatbot \"Coach\"\n",
+    "In the following, we assume the existence of the bot type created in the cells above. We show example code that will generate N bot instances of that type. Each instance has it's own prompts that will be appended to the type prompts."
    ]
   },
   {
@@ -137,32 +149,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "number = 40 # amount users to be created\n",
-    "# Change to list with hardcoded value, if you want to use and existing user.\n",
-    "uuids = [str(uuid.uuid4()) for _ in range(number)]\n",
-    "c  = 0 # counter for successful requests don't change\n",
+    "# Amount instances to be created\n",
+    "number_of_instances = 1\n",
+    "\n",
+    "# Change to list with hardcoded value, e.g., if you want to use existing users.\n",
+    "user_ids = [str(uuid.uuid4()) for _ in range(number_of_instances)]\n",
+    "\n",
+    "c  = 0 # counter for successful requests, don't change\n",
     "error_c = 0 # counter for failed requests, don't change\n",
-    "for id in uuids:\n",
-    "    learning_assistant = Chatbot(\n",
+    "for user_id in user_ids:\n",
+    "    bot = Chatbot(\n",
     "        database_file=\"data/chatbot.db\", \n",
-    "        type_id=\"c8db2547-25b5-43b5-b6b0-20c377b543fc\",\n",
-    "        user_id=id,\n",
-    "        type_name=\"Learning Assistant\",\n",
-    "        type_role='''\n",
-    "        Your are a mindful learning assistant. You always reply with short responses.\n",
-    "        You help users when they do their homework for school or prepare for exams.\n",
-    "        ''',\n",
-    "        instance_context='''\n",
-    "        You are now having a conversation with Kevin.\n",
-    "        Kevin is preparing for a math exam. The topic of examination is the pythagoras theorem.\n",
-    "        ''',\n",
-    "        instance_starter='''\n",
-    "            Create a short message to greet Kevin.\n",
-    "        '''\n",
+    "        type_id=\"053e97a0-6a91-4589-8602-340aa47b6376\",\n",
+    "        user_id=user_id,\n",
+    "        instance_context=Chatbot.default_instance_context,\n",
+    "        instance_starter=Chatbot.default_instance_starter\n",
     "    )\n",
     "    try:\n",
-    "        print(learning_assistant.starter())\n",
-    "        \n",
+    "        # each bot should have a first message to the user\n",
+    "        print(bot.starter())\n",
     "    except:\n",
     "        error_c += 1\n",
     "        continue\n",
@@ -173,39 +178,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Obtain URLs of all instances of a type\n",
+    "We need one instance of that type and can then use the type_instances() function to retrieve all of instance ids. Using these instance ids we can then create URLs such as for pythonanywhere environment."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "pythonanywhere_username = \"<ENTER YOUR PYTHONANYWHERE USERNAME HERE>\"\n",
-    "learning_assistant.get_bot_urls(pythonanywhere_username)"
+    "type_id = \"053e97a0-6a91-4589-8602-340aa47b6376\"\n",
+    "bot = Chatbot(\n",
+    "    database_file=\"data/chatbot.db\", \n",
+    "    type_id=type_id,\n",
+    "    user_id=user_ids[0]\n",
+    ")\n",
+    "\n",
+    "for user_id in bot.type_instances():\n",
+    "    print(\"https://{}.pythonanywhere.com/{}/{}/chat\".format(pythonanywhere_username, type_id, user_id))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pythonanywhere_username = \"heej\"\n",
-    "database_file=\"data/chatbot.db\"\n",
-    "connection = sqlite3.connect(database_file)\n",
-    "cursor = connection.cursor()\n",
-    "cursor.execute(\"SELECT type, user FROM chatbot_instances\")\n",
-    "rows = cursor.fetchall()\n",
-    "for row in rows:\n",
-    "    print(\"https://{}pythonanywhere.com/{}/{}/chat\".format(pythonanywhere_username, row[0], row[1]))\n",
-    "    \n",
-    "cursor.close()\n",
-    "connection.close()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
@@ -224,7 +220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
