--- a/chatbot_client.ipynb
+++ b/chatbot_client.ipynb
@@ -26,8 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-08-17T13:12:57.758359Z",
+     "start_time": "2023-08-17T13:12:57.427431Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import uuid\n",
@@ -53,18 +58,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-08-17T13:22:52.864538Z",
+     "start_time": "2023-08-17T13:22:52.856879Z"
+    }
+   },
    "outputs": [],
    "source": [
+    "# bot = Chatbot(\n",
+    "#     database_file=\"data/chatbot.db\", \n",
+    "#     type_id=\"9DB9EC22-71E6-4A10-B454-DCBF77CA109B\",\n",
+    "#     user_id=\"68F5F770-3788-4D3C-8F4A-9B229EE11AD0\",\n",
+    "#     type_name=Chatbot.default_type_name,\n",
+    "#     type_role=Chatbot.default_type_role,\n",
+    "#     instance_context=Chatbot.default_instance_context,\n",
+    "#     instance_starter=Chatbot.default_instance_starter\n",
+    "# )\n",
+    "\n",
+    "type_name = \"Act as a Linux Terminal\"\n",
+    "type_role = \"I want you to act as a linux terminal.\"\n",
+    "instance_context = \"I will type commands and you will reply with what the terminal should show. I want you to only reply with the terminal output inside one unique code block, and nothing else. do not write explanations. do not type commands unless I instruct you to do so. When I need to tell you something in English, I will do so by putting text inside curly brackets {like this}.\"\n",
+    "instance_starter = \"My first command is pwd\"\n",
+    "\n",
     "bot = Chatbot(\n",
     "    database_file=\"data/chatbot.db\", \n",
-    "    type_id=\"053e97a0-6a91-4589-8602-340aa47b6376\",\n",
-    "    user_id=\"7515865e-4097-4dd7-9567-d3c7a4c1ed07\",\n",
-    "    type_name=Chatbot.default_type_name,\n",
-    "    type_role=Chatbot.default_type_role,\n",
-    "    instance_context=Chatbot.default_instance_context,\n",
-    "    instance_starter=Chatbot.default_instance_starter\n",
+    "    type_id=\"9DB9EC22-71E6-4A10-B454-DCBF77CA109B\",\n",
+    "    user_id=\"68F5F770-3788-4D3C-8F4A-9B229EE11AD0\",\n",
+    "    type_name=type_name,\n",
+    "    type_role=type_role,\n",
+    "    instance_context=instance_context,\n",
+    "    instance_starter=instance_starter\n",
     ")"
    ]
   },
@@ -78,14 +103,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-08-17T14:00:24.858839Z",
+     "start_time": "2023-08-17T14:00:24.851916Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'role': 'system', 'content': 'I want you to act as a linux terminal.'}, {'role': 'system', 'content': 'I will type commands and you will reply with what the terminal should show. I want you to only reply with the terminal output inside one unique code block, and nothing else. do not write explanations. do not type commands unless I instruct you to do so. When I need to tell you something in English, I will do so by putting text inside curly brackets {like this}.'}]\n",
+      "{'name': 'Act as a Linux Terminal', 'role': 'I want you to act as a linux terminal.', 'context': 'I will type commands and you will reply with what the terminal should show. I want you to only reply with the terminal output inside one unique code block, and nothing else. do not write explanations. do not type commands unless I instruct you to do so. When I need to tell you something in English, I will do so by putting text inside curly brackets {like this}.'}\n"
+     ]
+    }
+   ],
    "source": [
     "bot = Chatbot(\n",
     "    database_file=\"data/chatbot.db\", \n",
-    "    type_id=\"053e97a0-6a91-4589-8602-340aa47b6376\",\n",
-    "    user_id=\"7515865e-4097-4dd7-9567-d3c7a4c1ed07\"\n",
+    "    type_id=\"9DB9EC22-71E6-4A10-B454-DCBF77CA109B\",\n",
+    "    user_id=\"68F5F770-3788-4D3C-8F4A-9B229EE11AD0\"\n",
     ")\n",
     "print(bot.conversation_retrieve(with_system=True))\n",
     "print(bot.info_retrieve())"
@@ -101,9 +140,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-08-17T14:06:02.082793Z",
+     "start_time": "2023-08-17T14:06:00.255213Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/user\n"
+     ]
+    }
+   ],
    "source": [
     "print(bot.starter())"
    ]
@@ -117,6 +169,9 @@
     "\n",
     "##### Generic URL\n",
     "https://[your pythonanywhere user name].pythonanywhere.com/[type id]/[user_id]/chat\n",
+    "\n",
+    "https://raaafael.pythonanywhere.com/9DB9EC22-71E6-4A10-B454-DCBF77CA109B/68F5F770-3788-4D3C-8F4A-9B229EE11AD0/chat\n",
+    "\n",
     "##### For Example\n",
     "https://monkey23.pythonanywhere.com/053e97a0-6a91-4589-8602-340aa47b6376/7515865e-4097-4dd7-9567-d3c7a4c1ed07/chat"
    ]
@@ -132,12 +187,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-08-17T14:31:53.228588Z",
+     "start_time": "2023-08-17T14:30:33.859899Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "`/home/user`\n",
+      "/home/user\n",
+      "```bash\n",
+      "/home/user\n",
+      "```\n",
+      "/home/user\n",
+      "/home/user\n",
+      "successful: 5, failed: 0\n"
+     ]
+    }
+   ],
    "source": [
     "# Amount instances to be created\n",
-    "number_of_instances = 1\n",
+    "number_of_instances = 5\n",
     "\n",
     "# Change to list with hardcoded value, e.g., if you want to use existing users.\n",
     "user_ids = [str(uuid.uuid4()) for _ in range(number_of_instances)]\n",
@@ -147,10 +222,10 @@
     "for user_id in user_ids:\n",
     "    bot = Chatbot(\n",
     "        database_file=\"data/chatbot.db\", \n",
-    "        type_id=\"053e97a0-6a91-4589-8602-340aa47b6376\",\n",
+    "        type_id=\"9DB9EC22-71E6-4A10-B454-DCBF77CA109B\",\n",
     "        user_id=user_id,\n",
-    "        instance_context=Chatbot.default_instance_context,\n",
-    "        instance_starter=Chatbot.default_instance_starter\n",
+    "        instance_context=instance_context,\n",
+    "        instance_starter=instance_starter\n",
     "    )\n",
     "    try:\n",
     "        # each bot should have a first message to the user\n",
@@ -174,12 +249,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-08-17T14:34:21.334058Z",
+     "start_time": "2023-08-17T14:34:21.307434Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://raaafael.pythonanywhere.com/9DB9EC22-71E6-4A10-B454-DCBF77CA109B/020294f2-e814-427b-82a5-59e29f256e52/chat\n",
+      "https://raaafael.pythonanywhere.com/9DB9EC22-71E6-4A10-B454-DCBF77CA109B/0d795603-5719-4275-94f6-bb45620e318a/chat\n",
+      "https://raaafael.pythonanywhere.com/9DB9EC22-71E6-4A10-B454-DCBF77CA109B/403f64e8-0ebb-4d90-be19-329765a606ac/chat\n",
+      "https://raaafael.pythonanywhere.com/9DB9EC22-71E6-4A10-B454-DCBF77CA109B/68F5F770-3788-4D3C-8F4A-9B229EE11AD0/chat\n",
+      "https://raaafael.pythonanywhere.com/9DB9EC22-71E6-4A10-B454-DCBF77CA109B/a14cbdd2-d1fc-44c4-b035-1cd2fd238138/chat\n",
+      "https://raaafael.pythonanywhere.com/9DB9EC22-71E6-4A10-B454-DCBF77CA109B/caa7f1f4-7101-4eaa-864b-50814227e953/chat\n"
+     ]
+    }
+   ],
    "source": [
-    "pythonanywhere_username = \"<ENTER YOUR PYTHONANYWHERE USERNAME HERE>\"\n",
-    "type_id = \"053e97a0-6a91-4589-8602-340aa47b6376\"\n",
+    "pythonanywhere_username = \"raaafael\"\n",
+    "type_id = \"9DB9EC22-71E6-4A10-B454-DCBF77CA109B\"\n",
     "bot = Chatbot(\n",
     "    database_file=\"data/chatbot.db\", \n",
     "    type_id=type_id,\n",
@@ -189,6 +282,15 @@
     "for user_id in bot.type_instances():\n",
     "    print(\"https://{}.pythonanywhere.com/{}/{}/chat\".format(pythonanywhere_username, type_id, user_id))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
