--- a/chatbot_client.ipynb
+++ b/chatbot_client.ipynb
@@ -136,10 +136,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Amount instances to be created\n",
+    "# Amount of instances to be created\n",
     "number_of_instances = 1\n",
     "\n",
-    "# Change to list with hardcoded value, e.g., if you want to use existing users.\n",
+    "# Change the following to a list with hardcoded value if you want to use existing users.\n",
     "user_ids = [str(uuid.uuid4()) for _ in range(number_of_instances)]\n",
     "\n",
     "c  = 0 # counter for successful requests, don't change\n",
