--- a/chatbot_client.ipynb
+++ b/chatbot_client.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Google Colab Only"
+    "#### Google Colab Only: START"
    ]
   },
   {
@@ -47,14 +47,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!git clone <https://github.com/zhaw-iwi/singlestate_conversations.git>"
+    "!git clone <https://github.com/zhaw-iwi/singlestate_conversations.git>\n",
+    "%cd singlestate_conversations/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install openai"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### For Everyone"
+    "#### Googe Colab Only: END"
    ]
   },
   {
