--- a/chatbot_client.ipynb
+++ b/chatbot_client.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!git clone <https://github.com/zhaw-iwi/singlestate_conversations.git>\n",
+    "!git clone https://github.com/zhaw-iwi/singlestate_conversations.git\n",
     "%cd singlestate_conversations/"
    ]
   },
