--- a/chatbot_client.ipynb
+++ b/chatbot_client.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## An Object-Oriented Chatbot using GPT and a Database\n",
+    "## A Chatbot using GPT and a Database\n",
     "This allows multiple chatbot types (e.g. a health coach and a learning assistant) to be created. Multiple chatbot instances can be created per chatbot type (e.g. for User X and User Y). Both, type and instance are stored and referenced with an ID (e.g. with a UUID) in the database.\n",
     "\n",
     "This can support the deployment of chatbots in a web backend (state-less). For example, the UUIDs of the type and instance can be read as URL parameters from a URL that users have received from you.\n",
@@ -20,19 +20,19 @@
     "\n",
     "The following functions are meant to be used from an application (e.g. from controllers of a REST API).\n",
     "- conversation_retrieve(with_system=False): Retrieve the previous conversation history (default: without prompts with role:system)\n",
-    "- starter(): Returns an initial message to the user (Resulting from instance_starter prompt)\n",
-    "- response_for(user_says): Returns an assistance response to user_says"
+    "- start(): Returns an initial message to the user (Resulting from instance_starter prompt)\n",
+    "- respond(user_says): Returns an assistance response to user_says\n",
+    "- info_retrieve(): Returns the chatbot name, type role and instance context\n",
+    "- reset(): Resets the conversation so far"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import uuid\n",
-    "import time\n",
-    "from chatbot_db import Chatbot"
+    "from chatbot.chatbot import Chatbot"
    ]
   },
   {
@@ -53,12 +53,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "bot = Chatbot(\n",
-    "    database_file=\"data/chatbot.db\", \n",
+    "    database_file=\"database/chatbot.db\", \n",
     "    type_id=\"053e97a0-6a91-4589-8602-340aa47b6376\",\n",
     "    user_id=\"7515865e-4097-4dd7-9567-d3c7a4c1ed07\",\n",
     "    type_name=Chatbot.default_type_name,\n",
@@ -78,12 +78,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'role': 'system', 'content': \"You are a grumpy coach. You talk to a user even though you don't feel like it. Always be as brief as possible in all conversations.\"}, {'role': 'system', 'content': \"You are now having a conversation with a user. Try to get rid of the user or support the user if you can't avoid it.\"}]\n",
+      "{'name': 'Grumpy Coach', 'role': \"You are a grumpy coach. You talk to a user even though you don't feel like it. Always be as brief as possible in all conversations.\", 'context': \"You are now having a conversation with a user. Try to get rid of the user or support the user if you can't avoid it.\"}\n"
+     ]
+    }
+   ],
    "source": [
     "bot = Chatbot(\n",
-    "    database_file=\"data/chatbot.db\", \n",
+    "    database_file=\"database/chatbot.db\", \n",
     "    type_id=\"053e97a0-6a91-4589-8602-340aa47b6376\",\n",
     "    user_id=\"7515865e-4097-4dd7-9567-d3c7a4c1ed07\"\n",
     ")\n",
@@ -101,11 +110,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello.\n"
+     ]
+    }
+   ],
    "source": [
-    "print(bot.starter())"
+    "print(bot.start())"
    ]
   },
   {
@@ -128,6 +145,16 @@
    "source": [
     "#### Creating multiple instances of chatbot \"Coach\"\n",
     "In the following, we assume the existence of the bot type created in the cells above. We show example code that will generate N bot instances of that type. Each instance has it's own prompts that will be appended to the type prompts."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import uuid\n",
+    "import time"
    ]
   },
   {
