--- a/google_colab.ipynb
+++ b/google_colab.ipynb
@@ -6,12 +6,11 @@
    "source": [
     "## An Object-Oriented Chatbot in Google Colab\n",
     "\n",
-    "This notebook contains the preparations needed to get the notebook chatbot_client.jpynb running in Google Colab.\n",
+    "This notebook contains the preparations needed to get the notebook **chatbot_client.jpynb** running in Google Colab.\n",
     "- You need a Google and Github account. Be prepared to authenticate yourself with both of these accounts.\n",
-    "- Execute the cells below.\n",
-    "- In Google Colab, navigate to the cloned repository and open the notebook chatbot_client.jpynb in Google Colab.\n",
-    "- Follow the instructions in that notebook.\n",
-    "- If you plan to deploy chatbots such as with pthonanywhere, follow the instructions in the file pythonanywhere.txt."
+    "- Once this notebook is open in Google Colab, execute the cells below.\n",
+    "- Open the notebook **chatbot_client.jpynb** in Google Colab and follow the instructions in that notebook.\n",
+    "- If you plan to deploy chatbots at pythonanywhere, follow the instructions in the file **pythonanywhere.txt**."
    ]
   },
   {
