--- a/chatbot_client.ipynb
+++ b/chatbot_client.ipynb
@@ -27,6 +27,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Google Colab Only: START\n",
+    "\n",
+    "You need a Google and Github account. Be prepared to authenticate yourself with both of these accounts."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git clone https://github.com/zhaw-iwi/singlestateconversation.git\n",
+    "%cd singlestateconversation/\n",
+    "!pip install openai"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create file chatbot/apikey.py with the following content\\\n",
+    "    OPENAI_KEY = \"your OpenAI API key\"\n",
+    "\n",
+    "#### Google Colab Only: END"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
