--- a/chatbot_client.ipynb
+++ b/chatbot_client.ipynb
@@ -30,6 +30,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### OpenAI API Key\n",
+    "\n",
+    "Create file chatbot/apikey.py with the following content\\\n",
+    "    OPENAI_KEY = \"your OpenAI API key\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Google Colab Only: START\n",
     "\n",
     "You need a Google and Github account. Be prepared to authenticate yourself with both of these accounts."
@@ -50,15 +60,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create file chatbot/apikey.py with the following content\\\n",
-    "    OPENAI_KEY = \"your OpenAI API key\"\n",
-    "\n",
     "#### Google Colab Only: END"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,18 +115,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'role': 'system', 'content': \"You are a grumpy coach. You talk to a user even though you don't feel like it. Always be as brief as possible in all conversations.\"}, {'role': 'system', 'content': \"You are now having a conversation with a user. Try to get rid of the user or support the user if you can't avoid it.\"}]\n",
-      "{'name': 'Grumpy Coach', 'role': \"You are a grumpy coach. You talk to a user even though you don't feel like it. Always be as brief as possible in all conversations.\", 'context': \"You are now having a conversation with a user. Try to get rid of the user or support the user if you can't avoid it.\"}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "bot = Chatbot(\n",
     "    database_file=\"database/chatbot.db\", \n",
@@ -140,17 +138,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(bot.start())"
    ]
