--- a/chatbot_client.ipynb
+++ b/chatbot_client.ipynb
@@ -110,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Retrieve the complete conversation (held so far) or the bot information (type_role, instance_context, and instance_starter) as retrieved from the database. Both may be used to display that on a frontend."
+    "Optionally retrieve the complete conversation (held so far) or the bot information (type_role, instance_context, and instance_starter) as retrieved from the database. Both may be used to display that on a frontend."
    ]
   },
   {
@@ -150,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "URL to be handed out to the user\n",
+    "URL to be handed out to the user: If you are following the instructions to deploy your chatbot(s) to pythonanywhere, this is the URL to access your chatbot.\n",
     "\n",
     "##### Generic URL\n",
     "https://[your pythonanywhere user name].pythonanywhere.com/[type id]/[user_id]/chat\n",
@@ -164,7 +164,7 @@
    "metadata": {},
    "source": [
     "#### Creating multiple instances of chatbot \"Coach\"\n",
-    "In the following, we assume the existence of the bot type created in the cells above. We show example code that will generate N bot instances of that type. Each instance has it's own prompts that will be appended to the type prompts."
+    "In the following, we assume the existence of the bot type created in the cells above. We show example code that will generate N bot instances of that type. Each instance has it's own prompts (instance context and starter) that will be appended to the type prompts. Most importantly, each instance has its own chat history."
    ]
   },
   {
