--- a/chatbot_client.ipynb
+++ b/chatbot_client.ipynb
@@ -32,8 +32,9 @@
    "source": [
     "#### OpenAI API Key\n",
     "\n",
-    "Create file chatbot/apikey.py with the following content\\\n",
-    "    OPENAI_KEY = \"your OpenAI API key\""
+    "Create file chatbot/openai.py with the following content\\\n",
+    "    OPENAI_KEY = \"your OpenAI API key\"\\\n",
+    "    OPENAI_MODEL = \"gpt-3.5-turbo-16k\""
    ]
   },
   {
