--- a/chatbot_client.ipynb
+++ b/chatbot_client.ipynb
@@ -30,11 +30,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### OpenAI API Key\n",
+    "#### OpenAI API Key and Model\n",
     "\n",
     "Create file chatbot/openai.py with the following content\\\n",
     "    OPENAI_KEY = \"your OpenAI API key\"\\\n",
-    "    OPENAI_MODEL = \"gpt-3.5-turbo-16k\""
+    "    OPENAI_MODEL = \"gpt-3.5-turbo-16k\"\\\n",
+    "(You may rename the file chatbot/openai_template.py to openai.py and set the key there)"
    ]
   },
   {
