some typos removed

--- a/chatbot_client.ipynb
+++ b/chatbot_client.ipynb
@@ -35,7 +35,7 @@
     "Create file chatbot/openai.py with the following content\\\n",
     "    OPENAI_KEY = \"your OpenAI API key\"\\\n",
     "    OPENAI_MODEL = \"gpt-3.5-turbo-16k\"\\\n",
-    "(You may rename the file chatbot/openai_template.py to openai.py and set the key there)"
+    "(You may rename the file chatbot/openai_template.py to openai.py and set the keys there)"
    ]
   },
   {
